syntax = "proto3";

package proto;

service state_server {
    rpc RecordRPC(RecordRequest) returns (RecordReply) {}
    rpc RetrieveRPC(RetrieveRequest) returns (RetrieveReply) {}
}

message RecordRequest {
    uint64 id = 1;
    bytes state = 2;
}

message RecordReply {
}

message RetrieveRequest {
    uint64 id = 1;
}

message RetrieveReply {
    bytes state = 2;
}
